--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@ __pycache__/
 # Distribution / packaging
 build/
 dist/
-MANIFEST
+MANIFEST*
+*.egg-info/
 
 # Temporary files / documentation
+requirements.txt
 *.swp
