--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,17 +5,22 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools.packages.find]
 where = ["src"]
 
+[tool.setuptools.dynamic]
+version = {attr = "moxel.__version__"}
+
 [project]
 name = "pymoxel"
-version = "0.0.1"
-authors = [
-  { name="Antonios P. Sarikas", email="antonios.sarikas@gmail.com" },
-]
-license = {text = "GPL-3.0-only"}
+dynamic = ["version"]
 
+authors = [
+  {name="Antonios P. Sarikas", email="antonios.sarikas@gmail.com"},
+]
+
+license = {text = "GPL-3.0-only"}
 description = "Package for parallel calculation of energy voxels."
 readme = "README.md"
 requires-python = ">=3.10"
+
 classifiers = [
     "Programming Language :: Python :: 3",
 	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
