--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,9 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools>=64", "setuptools_scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 where = ["src"]
-
-[tool.setuptools.dynamic]
-version = {attr = "moxel.__version__"}
 
 [project]
 name = "pymoxel"
@@ -28,12 +25,17 @@ classifiers = [
 ]
 
 dependencies = [
-	"matplotlib>=3.7.1",
-	"numpy>=1.24.1",
-	"pymatgen>=2023.5.10",
-	"rich>=13.4.1",
+	"numpy",
+	"fire",
+	"pymatgen",
+	"tqdm",
+	"matplotlib",
+	"pyvista",
 ]
 
 [project.urls]
 Homepage = "https://github.com/adosar/moxel"
 Documentation = "https://moxel.readthedocs.io"
+
+[project.scripts]
+moxel = "moxel.cli:moxel_fire"
