--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,69 +1,19 @@
-alabaster==0.7.13
-Babel==2.12.1
-certifi>=2023.7.22
-charset-normalizer==3.1.0
-contourpy==1.1.0
-cycler==0.11.0
-docutils==0.18.1
-emmet-core==0.67.5
-fonttools==4.42.1
-future==0.18.3
-idna==3.4
-imagesize==1.4.1
-Jinja2==3.1.2
-joblib==1.3.2
-kiwisolver==1.4.5
-latexcodec==2.0.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.2
-matplotlib==3.7.2
-mdurl==0.1.2
-monty==2023.9.5
-mp-api==0.35.1
-mpmath==1.3.0
-msgpack==1.0.5
-networkx==3.1
-numpy==1.25.2
-numpydoc==1.5.0
-packaging==23.1
-palettable==3.3.3
-pandas==2.1.0
-Pillow==10.0.0
-plotly==5.16.1
-pybtex==0.24.0
-pydantic==1.10.12
-Pygments==2.15.1
-pymatgen==2023.9.10
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2023.3.post1
-PyYAML==6.0.1
-requests==2.31.0
-rich==13.5.2
-ruamel.yaml==0.17.32
-ruamel.yaml.clib==0.2.7
-scipy==1.11.2
-six==1.16.0
-snowballstemmer==2.2.0
-spglib==2.1.0
-Sphinx==6.2.1
-sphinx-argparse==0.4.0
-sphinx-code-tabs==0.5.5
-sphinx-copybutton==0.5.2
-sphinx-rtd-theme==1.2.2
-sphinxcontrib-applehelp==1.0.4
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
-sphinxcontrib-jquery==4.1
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-sphinxemoji==0.2.0
-sympy==1.12
-tabulate==0.9.0
-tenacity==8.2.3
-tqdm==4.66.1
-typing_extensions==4.7.1
-tzdata==2023.3
-uncertainties==3.1.7
-urllib3==2.0.2
+matplotlib
+pyvista
+tqdm
+fire
+numpy
+numpydoc
+Sphinx
+sphinx-argparse
+sphinx-code-tabs
+sphinx-copybutton
+sphinx-rtd-theme
+sphinxcontrib-applehelp
+sphinxcontrib-devhelp
+sphinxcontrib-htmlhelp
+sphinxcontrib-jquery
+sphinxcontrib-jsmath
+sphinxcontrib-qthelp
+sphinxcontrib-serializinghtml
+sphinxemoji
