chore: pint `numpy` version to `1.26.4`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ classifiers = [
 ]
 
 dependencies = [
-	"numpy",
+	"numpy==1.26.4",  # To avoid potential dependency conflicts.
 	"fire",
 	"pymatgen",
 	"tqdm",
