docs(tutorial): add CLI usage with configuration files
Additional changes:
* Remove `sphinx-code-tabs` dependency
* Add `sphinx-design` dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ moxel = "moxel._cli:moxel_cli"
 [project.optional-dependencies]
 docs = [
     "sphinx==7.3.7",
-    "sphinx-code-tabs",
+    "sphinx-design",
     "sphinx-copybutton",
     "sphinx-rtd-theme",
     "sphinx-issues",
