--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
 
 dependencies = [
 	"numpy==1.26.4",  # To avoid potential dependency conflicts.
-	"jsonargparse[signatures]",
+	"jsonargparse[signatures]>=4.37.0",
 	"pymatgen",
 	"tqdm",
 ]
