--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,14 +16,13 @@ authors = [
   {name="Antonios P. Sarikas", email="antonios.sarikas@gmail.com"},
 ]
 
-license = {text = "GPL-3.0-only"}
+license = "GPL-3.0-only"
 description = "Package for parallel calculation of energy voxels."
 readme = "README.md"
 requires-python = ">=3.10"
 
 classifiers = [
     "Programming Language :: Python :: 3",
-	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: POSIX :: Linux",
 ]
 
