--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,9 @@ classifiers = [
 ]
 
 dependencies = [
-	"numpy==1.26.4",  # To avoid potential dependency conflicts.
+	"numpy>=1.26.4",
 	"jsonargparse[signatures]>=4.37.0",
-	"pymatgen",
+	"pymatgen>=2025.6.14",
 	"tqdm",
 ]
 
