--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
 dependencies = [
 	"numpy>=1.26.4",
 	"jsonargparse[signatures]>=4.37.0",
-	"pymatgen>=2025.6.14",
+	"pymatgen",
 	"tqdm",
 ]
 
